--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title dao
+    title 
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -33,11 +33,11 @@ head
 
 
 template(name='layout')
-    +nav
+    // +nav
     .ui.bottom.attached.pushable.segment
         // +topbar
-        +leftbar
-        +rightbar
+        // +leftbar
+        // +rightbar
                 
         #main_area.global_container.pusher
             +yield
