--- a/parts/stack/client/site.jade
+++ b/parts/stack/client/site.jade
@@ -247,6 +247,6 @@ template(name='s_q_item')
                 if creation_date
                     .item created {{ufrom creation_date}}
             +doc_emotion_small
-            +print_this
+            div
                 // .ui.label user_id #{user_id}
             // .ui.divider
