--- a/parts/stack/client/site_users.jade
+++ b/parts/stack/client/site_users.jade
@@ -29,7 +29,7 @@ template(name='su')
                         // |#{site_url}
                         i.external.icon
                     if in_dev
-                        +print_this
+                        div
                     a.ui.large.circular.basic.icon.button.say_title(href="/s/#{api_site_parameter}" title='site questions')
                         i.question.large.icon
                         // |questions
