--- a/parts/reddit/rpost.jade
+++ b/parts/reddit/rpost.jade
@@ -14,15 +14,6 @@ template(name='rpost')
                 | {{ufrom data.created}}
                 .ui.basic.button.get_post permalink #{permalink}
                 div
-                +skve k='view_section' v='main' l='main' i='content'
-                // +skve k='view_section' v='comments' l='comments' i='comment'
-                +skve k='view_section' v='watson' l='emotion' i='dna'
-                if tone
-                    +skve k='view_section' v='tone' l='tone' i='smile grey'
-                // +skve k='view_section' v='tags' l='tags' i='tags'
-                +skve k='view_section' v='related' l='related' i='fork'
-                +skve k='view_section' v='preview' l='preview' i='content'
-                // if skv_is 'view_section' 'main'
                 .scrolling
                     // if skv_is 'view_section' 'main'
                     if data.is_reddit_media_domain
@@ -72,16 +63,6 @@ template(name='rpost')
                     if skv_is 'view_section' 'related'
                         +post_related
                         +related_questions
-                    if skv_is 'view_section' 'tone'
-                        +tone
-                        // +skve k='view_section' v='money' l='money' i='money'
-                        // if skv_is 'view_section'
-                    if skv_is 'view_section' 'preview'
-                        iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
-                    // +convert
-                    // .spacer
-                    // if skv_is 'view_section' 'tags'
-                    // if skv_is 'view_section' 'comments'
                     +rcomments_tab
             .four.wide.column
                 a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
@@ -103,7 +84,7 @@ template(name='rpost')
                     |#{data.author}
                 +call_watson id=_id key='data.url' durl=data.url mode='url'
                 if in_dev
-                    +print_this
+                    div
                 if watson
                     +doc_emotion
                     unless tone
@@ -111,7 +92,7 @@ template(name='rpost')
                 // a.ui.large.basic.label(href=data.url target='_window')
                 //     | #{data.url}
                 if in_dev
-                    .ui.small.header reddit_id #{data.reddit_id}
+                    .ui.small.header #{data.reddit_id}
                 .ui.basic.label
                     i.comment.outline.icon
                     |#{data.comment_count}
@@ -122,7 +103,7 @@ template(name='rpost')
                 .ui.small.inline.header #{data.num_crossposts} crossposts
                 |#{tags.length}
                 each tags
-                    +flat_sub_tag_selector
+                    +flat_tag_picker
                 
                 
 template(name='rcomments_tab')                
@@ -151,7 +132,7 @@ template(name='rcomment')
                 |{{#markdown}} {{data.body}} {{/markdown}}
             .actions
                 each tags 
-                    +flat_sub_tag_selector
+                    +flat_tag_picker
                     // .ui.tiny.basic.label #/{this}
         if data.replies.data.children
             .ui.grid
@@ -163,7 +144,7 @@ template(name='rcomment')
                             |{{#markdown}} {{data.body}} {{/markdown}}
                             // .text.say #{data.score} #{data.body}
             // if in_dev
-            //     +print_this
+            //     div
                 
                 
                 
