--- a/parts/reddit/reddit.jade
+++ b/parts/reddit/reddit.jade
@@ -1,5 +1,5 @@
 template(name='reddit')
-    .ui.stackable.grid
+    .ui.stackable.padded.grid
         .sixteen.wide.column
             // if skv_is 'nightmode' true
             //     i.moon.link.icon.toggle_nightmode
@@ -20,73 +20,20 @@ template(name='reddit')
                 +tag_picker
                 // .ui.label(title=count) #{name}
             // div
-            .ui.inline.header #{post_count}
+            // .ui.inline.header #{post_count}
             // if skv_is 'sort_direction' 1
             //     .ui.icon.compact.basic.tertiary.button.sort_down
             //         i.caret.down.icon
             // else
             //     .ui.icon.compact.basic.tertiary.button.sort_up
             //         i.caret.up.icon
-            if currentUser
+            if in_dev
                 if skv_is 'nsfw' true
                     .ui.compact.black.button.make_safe
                         | nsfw
                 else
                     .ui.compact.basic.tertiary.button.make_nsfw
                         | safe
-            // if skv_is 'view_bounties' 1
-            //     .ui.compact.black.button.unview_bounties
-            //         i.hand.holding.heart.icon
-            //         | bounties
-            // else
-            //     .ui.compact.basic.tertiary.button.view_bounties
-            //         i.hand.holding.heart.icon
-            //         | bounties
-            // if skv_is 'view_unanswered' 1
-            //     .ui.compact.black.button.unview_unanswered
-            //         i.checkmark.icon
-            //         | unanswered
-            // else
-            //     .ui.compact.basic.tertiary.button.view_unanswered
-            //         i.question.icon
-            //         | unanswered
-            // .ui.icon.button.show_hot(class=hot_class)
-            //     i.fire.icon
-            // .ui.icon.button.show_best(class=best_class)
-            //     i.certificate.icon
-            // .ui.icon.compact.basic.small.button.show_newest(class=sort_created_class)
-            //     i.clock.icon
-            // .ui.compact.basic.small.tertiary.button.limit_1
-            //     |1
-            // .ui.compact.basic.small.tertiary.button.limit_10
-            //     |10
-            // if skv_is 'view_detail' true
-            //     .ui.black.compact.button.toggle_detail
-            //         i.list.icon
-            //         |detail
-            // else
-            //     .ui.compact.basic.tertiary.button.toggle_detail
-            //         i.minus.icon
-            //         |simple
-            //     // i.line.chart.icon
-            // if skv_is 'reddit_view_layout' 'grid'
-            //     .ui.compact.button.set_grid(class=grid_class) 
-            //         i.th.icon
-            //         |grid
-            // else
-            //     .ui.icon.compact.button.set_grid(class=grid_class) 
-            //         i.th.icon
-            // if skv_is 'reddit_view_layout' 'list'
-            //     .ui.compact.button.set_list(class=list_class)
-            //         i.list.icon
-            //         |list
-            // else
-            //     .ui.icon.compact.button.set_list(class=list_class)
-            //         i.list.icon
-            // .ui.icon.button.skip_left
-            //     i.chevron.left.icon
-            // .ui.icon.button.skip_right
-            //     i.chevron.right.icon
         .ui.sixteen.wide.column                
             .scrolling
                 if skv_is 'view_layout' 'grid'
@@ -105,7 +52,7 @@ template(name='reddit')
                                 +post_card
                 if rposts
                     if skv_is 'reddit_view_layout' 'grid'
-                        .ui.centered.three.stackable.cards 
+                        .ui.centered.four.stackable.cards 
                             each rposts
                                 +reddit_post_card
                 else
@@ -113,37 +60,33 @@ template(name='reddit')
                         i.big.loading.yin.yang.icon
    
 template(name='reddit_post_card')
-    .ui.card
+    a.ui.card(href=data.url target='_window')
         // .ui.stackable.equal.width.compact.grid
         //     .row
         if embed
             span.rounded.full
                 |!{embed}
             div
-        else if is_image
-            // |image
-            a.view_post(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.fluid.zoomer.image.toggle_view(src=data.url)
-        else if watson.metadata.image.length
+        // else if is_image
+        // |image
+        a.view_post(href=data.url class=post_header_class)
+            img.ui.fluid.zoomer.image.toggle_view
+        if watson.metadata.image
             // |metadata
-            a.view_post(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.inline.zoomer.image.toggle_view(src=watson.metadata.image)
+            img.ui.inline.zoomer.image.toggle_view(src=watson.metadata.image)
         else if data.thumbnail.length
             // |thumbnail
-            a.view_post(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
-                img.ui.inline.zoomer.image.zoomer(src=data.thumbnail)    
+            a.view_post
+                img.ui.inline.zoomer.fluid.image.zoomer(src=data.thumbnail)    
         // else if data.thumbnail.length
         //     .column
-        //         a.view_post(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
+        //         a.view_post(href=data.url class=post_header_class)
         //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
         // .column
         .content
-            a.ui.inline.small.header.view_post.zoomer(href="/r/#{data.subreddit}/post/#{_id}" class=post_header_class)
-                strong #{data.ups}:
+            a.ui.inline.header.view_post.zoomer(href=data.url class=post_header_class)
+                // strong #{data.ups}:
                 |!{data.title} 
-                // span.inline.content
-            a.ui.basic.label(href="/r/#{data.subreddit}" class=post_header_class)
-                |!{data.subreddit} 
                 // span.inline.content
             |{{ufrom data.created_utc}}
             each tags
@@ -166,9 +109,9 @@ template(name='unpick_tag')
 template(name='flat_tag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
     .ui.basic.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
-        if term
-            if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        // if term
+        //     if term.watson.metadata.image
+        //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
         strong #{this}
         // if in_dev
         //     small #{count}
